Fixing overflow bug and making the testimonial section live

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,13 @@
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
+}
 body {
   background: rgb(5, 5, 5);
 }
